load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

native_binary(
    name = "grpcwebproxy",
    src = select({
        "@bazel_tools//src/conditions:linux_x86_64": "@com_github_improbable_eng_grpcwebproxy_linux//:dist/grpcwebproxy-v0.14.0-linux-x86_64",
        "@bazel_tools//src/conditions:darwin_x86_64": "@com_github_improbable_eng_grpcwebproxy_osx//:dist/grpcwebproxy-v0.14.0-osx-x86_64",
    }),
    out = "grpcwebproxy",
)
