load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//bazel:jest.bzl", "ts_jest_test")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "components",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/app/ui",
        "//src/frontend/metamarkdown/renderer",
        "//src/frontend/store/eval_store",
        "//src/frontend/store/eval_store:use_context",
        "//src/frontend/store/scribbles_store",
        "//src/frontend/store/scribbles_store:provider",
        "//src/frontend/store/spread_store",
        "//src/frontend/store/spread_store:use_context",
        "@npm//@monaco-editor/react",
        "@npm//@types/react",
        "@npm//@types/react-native",
        "@npm//mobx-react-lite",
        "@npm//react",
        "@npm//react-native",
        "@npm//use-debounce",
    ],
)

ts_jest_test(
    name = "components_integration_test",
    srcs = glob([
        "*.test.tsx",
        "__mocks__/*.tsx",
    ]) + [
        "//src/types",
    ],
    deps = [
        ":components",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//google-protobuf",
        "@npm//mobx-react-lite",
        "@npm//react-dom",
    ],
)
