load("//bazel:ts_project.bzl", "ts_project")
load("//bazel:jest.bzl", "ts_jest_test")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "components",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "**/*.test.ts",
            "**/*.test.tsx",
        ],
    ),
    deps = [
        "//src/frontend/app/ui",
        "//src/frontend/metamarkdown/renderer",
        "//src/frontend/store/eval_store",
        "//src/frontend/store/eval_store:context",
        "//src/frontend/store/scribbles_store",
        "//src/frontend/store/scribbles_store:provider",
        "//src/frontend/store/spread_store",
        "//src/frontend/store/spread_store:context",
        "//src/frontend/store/spread_store:provider",
        "@npm//@monaco-editor/react",
        "@npm//@types/react",
        "@npm//@types/react-native",
        "@npm//@types/react-router-dom",
        "@npm//mobx-react-lite",
        "@npm//react",
        "@npm//react-native",
        "@npm//react-router-dom",
        "@npm//use-debounce",
    ],
)

ts_jest_test(
    name = "components_integration_test",
    srcs = glob([
        "*.test.tsx",
        "__mocks__/*.tsx",
    ]) + [
        "//src/types",
    ],
    deps = [
        ":components",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//google-protobuf",
        "@npm//mobx-react-lite",
        "@npm//react-dom",
    ],
)
