load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "parser",
    srcs = glob(
        ["*.ts"],
        exclude = ["*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/store/interface",
        "@npm//@types/parsimmon",
        "@npm//mdast-util-compact",
        "@npm//parsimmon",
        "@npm//ts-mdast",
        "@npm//unified",
        "@npm//vfile",
    ],
)

ts_jest_test(
    name = "parser_test",
    srcs = glob(["*.test.ts"]) + ["//src/types"],
    deps = [
        ":parser",
        "//src/frontend/metamarkdown/parser/mocks:mock_store",
        "@npm//beautify",
        "@npm//commonmark-spec",
        "@npm//mdast-util-compact",
        "@npm//remark-html",
    ],
)
