load("//bazel:jest.bzl", "ts_jest_test")
load("//bazel:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "parser",
    srcs = ["parser.ts"],
    deps = [
        "//src/frontend/store/scribble",
        "@npm//@types/parsimmon",
        "@npm//mdast-util-compact",
        "@npm//parsimmon",
        "@npm//ts-mdast",
        "@npm//unified",
        "@npm//vfile",
    ],
)

ts_project(
    name = "widget",
    srcs = ["widget.ts"],
    deps = [
        "@npm//ts-mdast",
    ],
)

ts_jest_test(
    name = "parser_test",
    srcs = glob(["*.test.ts"]) + ["//src/types"],
    deps = [
        ":parser",
        "//src/frontend/store/scribbles_store:mock_store",
        "@npm//beautify",
        "@npm//commonmark-spec",
        "@npm//mdast-util-compact",
        "@npm//remark-html",
    ],
)
