load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "renderer",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "components.ts",
            "*.test.ts",
            "*.test.tsx",
        ],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/metamarkdown/parser",
        "//src/frontend/metamarkdown/parser:widget",
        "//src/frontend/store/scribble",
        "@npm//@types/react",
        "@npm//@types/react-native",
        "@npm//ts-mdast",
        "@npm//unified",
    ],
)

ts_project(
    name = "components",
    srcs = ["components.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/react",
    ],
)

ts_jest_test(
    name = "renderer_test",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    deps = [
        ":renderer",
        "//src/frontend/store/scribbles_store:mock_store",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//mobx-react-lite",
        "@npm//react-dom",
    ],
)
