load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "eval_store",
    srcs = [
        "context.ts",
        "eval_store.ts",
        "provider.tsx",
    ],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@types/react",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//react",
    ],
)

ts_project(
    name = "use_context",
    srcs = ["use_context.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        ":eval_store",
        "@npm//@types/react",
        "@npm//react",
    ],
)
