load("//bazel:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "eval_store",
    srcs = [
        "context.ts",
        "eval_store.ts",
        "provider.tsx",
    ],
    deps = [
        "@npm//@types/react",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//react",
    ],
)

ts_project(
    name = "context",
    srcs = ["use_context.ts"],
    deps = [
        ":eval_store",
        "@npm//@types/react",
        "@npm//react",
    ],
)
