load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "scribble",
    srcs = glob(
        ["*.ts"],
        exclude = ["**/*.test.ts"],
    ),
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/common/api:api_web",
        "//src/frontend/store/interface",
        "//src/frontend/store/scribble/module",
        "@npm//@types/js-yaml",
        "@npm//ajv",
        "@npm//google-protobuf",
        "@npm//js-yaml",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//ulid",
    ],
)

ts_jest_test(
    name = "scribble_test",
    srcs = glob(["*.test.ts"]),
    deps = [
        ":scribble",
        "//src/frontend/store",
        "//src/frontend/store/client",
    ],
)
