load("//bazel:jest.bzl", "ts_jest_test")
load("@npm//@bazel/typescript:index.bzl", "ts_project")
load("//bazel:interface_extractor.bzl", "ts_extracted_interface")

package(default_visibility = ["//visibility:public"])

ts_extracted_interface(
    name = "version_interface",
    src = "version.ts",
    deps = [
        "computed_metadata.ts",
        ":ids",
    ],
)

ts_extracted_interface(
    name = "scribble_interface",
    src = "scribble.ts",
    rewrite = {
        "./version": "./version_interface",
    },
    deps = [
        "version.ts",
        ":ids",
    ],
)

ts_project(
    name = "scribble",
    srcs = glob(
        [
            "*.ts",
            "*.tsx",
        ],
        exclude = [
            "ids.ts",
            "core_scribble.ts",
            "**/*.test.ts",
        ],
    ) + [
        "//src/frontend/store/scribbles_store:scribbles_store_interface",
    ],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        ":core_scribble",
        ":ids",
        "//src/common/api:api_web",
        "//src/frontend/metamarkdown/renderer:components",
        "//src/frontend/store/scribble/module",
        "@npm//@types/js-yaml",
        "@npm//ajv",
        "@npm//google-protobuf",
        "@npm//js-yaml",
        "@npm//mobx",
        "@npm//mobx-utils",
        "@npm//ulid",
    ],
)

ts_project(
    name = "core_scribble",
    srcs = ["core_scribble.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        ":ids",
        "//src/common/api:api_web",
    ],
)

ts_project(
    name = "ids",
    srcs = ["ids.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
)

ts_jest_test(
    name = "scribble_test",
    srcs = glob(["*.test.ts"]),
    deps = [
        ":scribble",
        "//src/frontend/store/client",
        "//src/frontend/store/scribbles_store",
    ],
)
