load("//bazel:jest.bzl", "ts_jest_test")
load("//bazel:interface_extractor.bzl", "ts_extracted_interface")
load("//bazel:ts_project.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_extracted_interface(
    name = "scribbles_store_interface",
    src = "scribbles_store.ts",
    rewrite = {
        "../scribble/scribble": "../scribble/scribble_interface",
    },
    deps = [
        "//src/frontend/store/scribble:ids",
        "//src/frontend/store/scribble:scribble_interface",
    ],
)

ts_project(
    name = "scribbles_store",
    srcs = [
        "fetch_status.ts",
        "scribbles_store.ts",
        "tagging.ts",
        "upload_status.ts",
    ],
    deps = [
        "//src/frontend/scribbles",
        "//src/frontend/store/client",
        "//src/frontend/store/scribble",
        "//src/frontend/store/scribble:core_scribble",
        "//src/frontend/store/scribble:scribble_interface",
        "@npm//mobx",
        "@npm//mobx-utils",
    ],
)

ts_project(
    name = "context",
    srcs = [
        "context.ts",
        "use_context.ts",
    ],
    deps = [
        ":scribbles_store_interface",
        "//src/frontend/store/client",
        "@npm//@types/react",
        "@npm//react",
    ],
)

ts_project(
    name = "provider",
    srcs = [
        "provider.tsx",
    ],
    deps = [
        ":context",
        ":scribbles_store",
        "//src/frontend/store/client",
        "@npm//@types/react",
        "@npm//react",
    ],
)

ts_project(
    name = "mock_store",
    testonly = True,
    srcs = ["mock_store.ts"],
    deps = [
        ":scribbles_store",
        "//src/frontend/scribbles",
        "@npm//@types/parsimmon",
        "@npm//mobx",
    ],
)

ts_jest_test(
    name = "store_test",
    srcs = glob([
        "*.test.ts",
        "*.test.tsx",
    ]),
    deps = [
        ":scribbles_store",
        "//src/common/api:api_web",
        "@npm//@testing-library/react-native",
        "@npm//@types/react-test-renderer",
        "@npm//google-protobuf",
        "@npm//mobx-react-lite",
        "@npm//react-dom",
    ],
)
