load("@npm//@bazel/typescript:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "mock_store",
    srcs = ["store.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        "//src/frontend/scribbles",
        "//src/frontend/store",
        "//src/frontend/store/interface",
        "@npm//@types/parsimmon",
        "@npm//mobx",
    ],
)
